add findAddressById to AddressService, update AddressServiceTest, test AddressService in BakeryApplication